# GMNoesis

./: LICENSE  readme.md
GMNoesis/: .gitignore  GMNoesis.yyp  NoesisGM.yyp
GMNoesis/datafiles/Screens/: FavoriteColorsListItemComponent.xaml  GMNoesis.noesis  GameResources.xaml  GlobalResources.xaml  MainPage.xaml
GMNoesis/datafiles/Screens/.noesis/data/sets/: ViewModel Data 01.xaml
GMNoesis/datafiles/Screens/.noesis/data/structures/: MyEnum000.xml  MyStructure000.xml  PlayerScoreViewModel.xml  PlayerViewModel.xml  ViewModel.xml
GMNoesis/datafiles/Screens/GMNoesis/: NineSliceResources.xaml  ScrollViewer.xaml
GMNoesis/datafiles/Screens/Theme/: NoesisTheme.Styles.xaml
GMNoesis/extensions/GMNoesis/: GMNoesis.yy
GMNoesis/objects/obj_gmnoesis_runner/: Step_0.gml  Step_1.gml  Step_2.gml  obj_gmnoesis_runner.yy
GMNoesis/objects/obj_noesis_runner/: Alarm_0.gml  Create_0.gml  Step_0.gml  Step_1.gml  obj_noesis_runner.yy
GMNoesis/objects/obj_test_vm/: Create_0.gml  Draw_0.gml  Step_0.gml  obj_test_vm.yy
GMNoesis/options/extensions/: GMNoesis.json
GMNoesis/rooms/Room1/: Room1.yy
GMNoesis/scripts/GMNoesisDelegate/: GMNoesisDelegate.gml  GMNoesisDelegate.yy
GMNoesis/scripts/GMNoesisGML/: GMNoesisGML.gml  GMNoesisGML.yy
GMNoesis/scripts/GMNoesisVM/: GMNoesisVM.gml  GMNoesisVM.yy
GMNoesis/scripts/TestVM/: TestVM.gml  TestVM.yy
GMNoesisDLL/: .gitignore  CMakeLists.txt  generate_sln.bat
GMNoesisDLL/src/: App.Interactivity.cpp  DynamicViewModel.cpp  DynamicViewModel.h  GeneratedVMTypeData.cpp  GeneratedVMTypeData.h  LayoutScaler.cpp  LayoutScaler.h  NineSliceImage.cpp  NineSliceImage.h  ThicknessConverter.Toolkit.cpp  ThicknessConverter.h  VMPropertyChangedMessage.cpp  VMPropertyChangedMessage.h  VMWriteMessage.cpp  VMWriteMessage.h  main.cpp
GMNoesisDLL/src/Windows/: WindowsKeys.h
